更新第二章

--- a/ref/ref.bib
+++ b/ref/ref.bib
@@ -942,4 +942,208 @@
   publisher = {中国建筑学会工程勘察分会},
 }
 
+@Article{胥犇2010盾构隧道结构病害状态综合评价方法研究,
+  author    = {胥犇 and 王华牢 and 夏才初},
+  title     = {盾构隧道结构病害状态综合评价方法研究},
+  journal   = {地下空間與工程學報},
+  year      = {2010},
+  volume    = {6},
+  number    = {1},
+  pages     = {201--207},
+  lang      = {zh},
+  pinyin    = {xubenwanghualaoxiacaichu},
+  publisher = {重慶大學期刊社},
+}
+
+@MastersThesis{朱宝林2014运营地铁盾构隧道状态评估及预测方法研究,
+  author  = {朱宝林},
+  title   = {运营地铁盾构隧道状态评估及预测方法研究},
+  school  = {同济大学},
+  year    = {2014},
+  address = {上海},
+  lang    = {zh},
+  pinyin  = {zhubaolin},
+}
+
+@MastersThesis{陈楠2017考虑发展趋势与指标关联的隧道结构健康评估方法研究,
+  author  = {陈楠},
+  title   = {考虑发展趋势与指标关联的隧道结构健康评估方法研究},
+  school  = {同济大学},
+  year    = {2017},
+  address = {上海},
+  lang    = {zh},
+  pinyin  = {chennan},
+}
+
+@PhdThesis{陈雪琴2017交通基础设施服役性能评估和预测以及养护时机优化分析,
+  author  = {陈雪琴},
+  title   = {交通基础设施服役性能评估和预测以及养护时机优化分析},
+  school  = {同济大学},
+  year    = {2017},
+  address = {上海},
+  lang    = {zh},
+  pinyin  = {陈雪琴},
+}
+
+@PhdThesis{滕丽2012基于土体力学特性的盾构隧道施工风险监控系统研究,
+  author = {滕丽},
+  title  = {基于土体力学特性的盾构隧道施工风险监控系统研究},
+  school = {上海大学},
+  year   = {2012},
+  lang   = {zh},
+  pinyin = {tengli},
+}
+
+@PhdThesis{杨春山2012运营地铁盾构隧道衬砌结构安全评估体系研究,
+  author  = {杨春山},
+  title   = {运营地铁盾构隧道衬砌结构安全评估体系研究},
+  school  = {广东工业大学},
+  year    = {2012},
+  address = {广州},
+  lang    = {zh},
+  pinyin  = {yangchunshan},
+}
+
+@Article{关宝树1993日本铁路隧道维修养护管理技术的现状,
+  author  = {关宝树},
+  title   = {日本铁路隧道维修养护管理技术的现状},
+  journal = {隧道译丛},
+  year    = {1993},
+  number  = {6},
+  pages   = {1--8},
+  lang    = {zh},
+  pinyin  = {guanbaoshu},
+}
+
+@Article{shen2014long,
+  author    = {Shen, Shui-Long and Wu, Huai-Na and Cui, Yu-Jun and Yin, Zhen-Yu},
+  title     = {Long-term settlement behaviour of metro tunnels in the soft deposits of Shanghai},
+  journal   = {Tunnelling and Underground Space Technology},
+  year      = {2014},
+  volume    = {40},
+  pages     = {309--323},
+  publisher = {Elsevier},
+}
+
+@Article{chai2004land,
+  author    = {Chai, J-C and Shen, S-L and Zhu, H-H and Zhang, X-L},
+  title     = {Land subsidence due to groundwater drawdown in Shanghai},
+  journal   = {Geotechnique},
+  year      = {2004},
+  volume    = {54},
+  number    = {2},
+  pages     = {143--147},
+  publisher = {Thomas Telford Ltd},
+}
+
+@Article{王如路2004上海地铁监护实践,
+  author  = {王如路 and 刘建航},
+  title   = {上海地铁监护实践},
+  journal = {地下工程与隧道},
+  year    = {2004},
+  volume  = {1},
+  pages   = {27--32},
+  lang    = {zh},
+  pinyin  = {wangrululiujianhang},
+}
+
+@PhdThesis{叶耀东2007软土地区运营地铁盾构隧道结构变形及健康诊断方法研究,
+  author  = {叶耀东},
+  title   = {软土地区运营地铁盾构隧道结构变形及健康诊断方法研究},
+  school  = {同济大学},
+  year    = {2007},
+  address = {上海},
+  lang    = {zh},
+  pinyin  = {yeyaodong},
+}
+
+@Article{mahdevari2012prediction,
+  author    = {Mahdevari, Satar and Torabi, Seyed Rahman},
+  title     = {Prediction of tunnel convergence using artificial neural networks},
+  journal   = {Tunnelling and Underground Space Technology},
+  year      = {2012},
+  volume    = {28},
+  pages     = {218--228},
+  publisher = {Elsevier},
+}
+
+@Article{廖少明2005隧道纵向剪切传递效应及其一维解析,
+  author  = {廖少明 and 侯学渊 and 彭芳乐},
+  title   = {隧道纵向剪切传递效应及其一维解析},
+  journal = {岩石力学与工程学报},
+  year    = {2005},
+  volume  = {24},
+  number  = {7},
+  pages   = {1110--1116},
+  lang    = {zh},
+  pinyin  = {liaoshaominghouxueyuanpengfangle},
+}
+
+@InProceedings{tobias1995introduction,
+  author       = {Tobias, Randall D and others},
+  title        = {An introduction to partial least squares regression},
+  booktitle    = {Proceedings of the twentieth annual SAS users group international conference},
+  year         = {1995},
+  pages        = {1250--1257},
+  organization = {SAS Institute Cary, NC},
+}
+
+@Book{王惠文1999偏最小二乘回归方法及其应用,
+  title     = {偏最小二乘回归方法及其应用},
+  publisher = {国防工业出版社},
+  year      = {1999},
+  author    = {王惠文},
+  lang      = {zh},
+  pinyin    = {wanghuiwen},
+}
+
+@Article{wold1987principal,
+  author    = {Wold, Svante and Esbensen, Kim and Geladi, Paul},
+  title     = {Principal component analysis},
+  journal   = {Chemometrics and intelligent laboratory systems},
+  year      = {1987},
+  volume    = {2},
+  number    = {1-3},
+  pages     = {37--52},
+  publisher = {Elsevier},
+}
+
+@Article{thompson2005canonical,
+  author    = {Thompson, Bruce},
+  title     = {Canonical correlation analysis},
+  journal   = {Encyclopedia of statistics in behavioral science},
+  year      = {2005},
+  publisher = {Wiley Online Library},
+}
+
+@Article{cheng1999evaluating,
+  author    = {Cheng, Ching-Hsue and Yang, Kuo-Lung and Hwang, Chia-Lung},
+  title     = {Evaluating attack helicopters by AHP based on linguistic variable weight},
+  journal   = {European journal of operational research},
+  year      = {1999},
+  volume    = {116},
+  number    = {2},
+  pages     = {423--435},
+  publisher = {Elsevier},
+}
+
+@PhdThesis{李蓉2007基于层次分析法的桥梁健康状态模糊综合评估方法的研究及其应用,
+  author = {李蓉},
+  title  = {基于层次分析法的桥梁健康状态模糊综合评估方法的研究及其应用},
+  school = {湖南大学},
+  year   = {2007},
+  lang   = {zh},
+  pinyin = {lirong},
+}
+
+@PhdThesis{孙九春2002大型桥梁综合评估系统研究,
+  author  = {孙九春},
+  title   = {大型桥梁综合评估系统研究},
+  school  = {同济大学},
+  year    = {2002},
+  address = {上海},
+  lang    = {zh},
+  pinyin  = {sunjiuchun},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
