--- a/tongjiutils.sty
+++ b/tongjiutils.sty
@@ -13,7 +13,7 @@ would like to use here]
 \RequirePackage{bigstrut}
 
 % 跨页表格
-%\RequirePackage{longtable}
+\RequirePackage{longtable}
 
 % 固定宽度的表格
 %\RequirePackage{tabularx}
