--- a/tex/Denotation.tex
+++ b/tex/Denotation.tex
@@ -4,4 +4,5 @@
 \item[GFDL] GNU Free Documentation License
 \item[GPL] GNU General Public License
 \item[FSF] Free Software Foundation
+\item[FSF] Free Software Foundation
 \end{denotation}
